# vpk0

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  main.yml
src/: decode.rs  encode.rs  encoder.rs  errors.rs  format.rs  lib.rs
src/encode/: huffman.rs  lzss.rs
test/: lorem.txt  lorem.vpk0
tests/: bad-file.vpk0  file39-raw.vpk0  lorem.txt  method0.vpk0  method1.vpk0  tests.rs
