[package]
name = "vpk0"
version = "0.8.0"
authors = ["tehzz"]
edition = "2018"
license = "MIT"
description = "A Rust library for handling Nintendo's N64-era vpk0 data compression"
keywords = ["compression", "vpk0", "Nintendo", "N64", "eReader"]
repository = "https://github.com/tehzz/vpk0"
readme = "README.md"


[dependencies]
bitstream-io = "0.8.2"
slice-deque = "0.3.0"
smallvec = {version = "1.6.1", features = ["union"]}

[badges]
github = {repository = "tehzz/vpk0"}

[profile.test]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
